--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -5,9 +5,18 @@
   height: 100vh;
 }
 
+.home-avatar{
+  position: absolute;
+  top: 3%;
+  right: 0;
+  margin-right: 10px;
+}
+
 .home-main{
     width: 100%;
-    background: url("../../asset/img/PHOTO-2021-05-20-19-33-42.jpg");
-    background-size: auto;
-    background-position: center;
-}
+    height: 100%;
+    clip-path: polygon(37% 76%, 57% 63%, 77% 73%, 100% 50%, 100% 99%, 70% 100%, 24% 100%, 20% 100%, 0 100%, 17% 80%);
+    background-color: #FF3CAC;
+    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+    
+  }
