--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
-body {
-background-color: rgb(24, 24, 24);
-color: whitesmoke;
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+
 }
 
+body {
+ 
+  font-size: 24px;
+  background-color: rgb(24, 24, 24);
+  color: whitesmoke;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
